# beast-mode-mastering

./: .gitignore  LICENSE-NOTICE.md  README.md  README_corrected.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: BUILD_LINUX.md
freeze/: FREEZE_NOTES_2026-03-30.md  SHA256SUMS.txt
scripts/: export_mastered_cli.py  install_desktop_integration.sh  uninstall_desktop_integration.sh
src/beast_mode_mastering/: __init__.py  app.py
