[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beast-mode-mastering"
version = "2026.03.30"
description = "Frozen GUI mastering assistant snapshot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyQt6>=6.7",
  "numpy>=1.26",
  "sounddevice>=0.4.7",
  "soundfile>=0.12.1",
  "librosa>=0.10.2",
  "tensorflow>=2.16",
]

[project.scripts]
beast-mode-mastering = "beast_mode_mastering.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
